# data-product-complexity-estimator

./: .gitignore  README.md  bla.xlsx  data_product_complexity_tool.py  data_product_complexity_tool.xlsx  full_data_product_complexity_questionnaire.old.yaml  full_data_product_complexity_questionnaire.yaml  pyproject.toml  tmp_bla.xlsx  tmp_data_product_complexity_tool.xlsx  transform.py  ~$data_product_complexity_tool.xlsx
data_product_complexity/: data_product_complexity.py  data_product_complexity_tool.py  excel_backend.py  google_form_backend.py  validate_input.py
